Add DTM Cube logo and eco-green theme

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About • DTM Studio</title>
+  <link rel="icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" href="assets/style.css">
   <meta name="description" content="DTM Studio — Diamond Turning Manager for precision optics labs.">
 </head>
@@ -11,7 +12,7 @@
   
 <div class="nav">
   <div class="inner">
-    <div class="brand"><img src="assets/logo.svg" alt="DTM logo"><span>DTM Studio</span></div>
+    <div class="brand"><img src="assets/dtmlogo.png" alt="DTM Cube Logo"></div>
     <div class="menu">
       <a href="index.html">Home</a>
       <a href="features.html">Features</a>
@@ -27,17 +28,15 @@
   <div class="container">
     <h2 class="section-title">About</h2>
     <div class="card">
-      <p><strong>DTM Studio</strong> is built by a precision optics CNC operator in a real SPDT production environment. The goal is clear: make everyday work faster, safer, and more intuitive while keeping full control over accuracy.</p>
-      <p>Focus areas include: multi‑segment generation, explicit tool radius, robust profile corrections (MOD/XYZ), and clean UI that helps operators avoid mistakes. The product evolves from real‑world feedback on the shop floor.</p>
-      <p class="small">Location: Riga, Latvia • Status: Active development</p>
+      <p><strong>DTM Studio</strong> is crafted in Riga by a precision optics CNC operator. The mission: simplify daily SPDT work without sacrificing accuracy.</p>
+      <p>Key pillars: multi‑segment generation, explicit tool radius, robust corrections (MOD/XYZ), and an eco‑green UI that helps operators avoid mistakes.</p>
+      <p class="small">Status: Active development • Region: EU</p>
     </div>
   </div>
 </section>
 
   
-<div class="footer small">
-  © 2025 DTM Studio — All rights reserved.
-</div>
+<div class="footer small">© 2025 DTM Studio — All rights reserved.</div>
 
 </body>
 </html>
