--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home • DTM Studio</title>
+  <link rel="icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" href="assets/style.css">
   <meta name="description" content="DTM Studio — Diamond Turning Manager for precision optics labs.">
 </head>
@@ -11,7 +12,7 @@
   
 <div class="nav">
   <div class="inner">
-    <div class="brand"><img src="assets/logo.svg" alt="DTM logo"><span>DTM Studio</span></div>
+    <div class="brand"><img src="assets/dtmlogo.png" alt="DTM Cube Logo"></div>
     <div class="menu">
       <a href="index.html">Home</a>
       <a href="features.html">Features</a>
@@ -24,13 +25,18 @@
 
   
 <section class="hero">
-  <div class="container">
-    <span class="badge">Diamond Turning Manager</span>
-    <h1>Simple. Accurate. Intuitive.</h1>
-    <p>DTM Studio is a modern toolchain for SPDT workflows — designed by operators, for operators. Focus on multi‑segment surfaces, programmable tool radius, and smart profile corrections.</p>
-    <div style="margin-top:18px;display:flex;gap:12px;justify-content:center;flex-wrap:wrap">
-      <a class="btn" href="features.html">Explore Features</a>
-      <a class="btn btn-outline" href="contact.html">Request Demo</a>
+  <div class="container wrap">
+    <div>
+      <span class="badge">Diamond Turning Manager</span>
+      <h1>DTM Studio — eco‑green precision</h1>
+      <p>Next‑gen toolchain for SPDT. Built by operators for operators. Multi‑segment surfaces, explicit tool radius, safe profile corrections, and clean visualization — all in one place.</p>
+      <div style="display:flex;gap:12px;flex-wrap:wrap">
+        <a class="btn" href="features.html">Explore Features</a>
+        <a class="btn btn-outline" href="gallery.html">See Gallery</a>
+      </div>
+    </div>
+    <div style="display:flex;justify-content:center;align-items:center">
+      <img src="assets/dtmlogo.png" alt="DTM Logo" style="max-width:80%;height:auto;border-radius:16px">
     </div>
   </div>
 </section>
@@ -39,20 +45,18 @@
   <div class="container">
     <h2 class="section-title">Highlights</h2>
     <div class="grid">
-      <div class="card"><h3>Multi‑segment Surfaces</h3><p>Compose Asphere, Bevel, Flat and more — engineered for real production needs.</p></div>
-      <div class="card"><h3>Programmable Tool Radius</h3><p>Clean support across passes, with clear M3/M4 modes. No legacy compensation conflicts.</p></div>
-      <div class="card"><h3>Profile Corrections</h3><p>Apply MOD/XYZ corrections per side with scaling and shift. Stack safely with undo.</p></div>
-      <div class="card"><h3>SAPR</h3><p>Smart Adaptive Profile Reconstruction — alternative to slope‑style corrections.</p></div>
-      <div class="card"><h3>Chamfer Automation</h3><p>Reliable retract at chamfer end to protect edges. Parameterized and repeatable.</p></div>
-      <div class="card"><h3>Trajectory Visualization</h3><p>Understand tool motion before cutting. Confidence for the first run.</p></div>
+      <div class="card"><h3>Multi‑segment Surfaces</h3><p>Combine Asphere, Bevel, Flat — each with its own parameters and lengths.</p></div>
+      <div class="card"><h3>Programmable Tool Radius</h3><p>Explicit radius with clear M3/M4 modes. No legacy compensation overlap.</p></div>
+      <div class="card"><h3>Per‑side Corrections</h3><p>Apply MOD/XYZ per Left/Right/Average with % scaling and X‑shift.</p></div>
+      <div class="card"><h3>SAPR</h3><p>Smart Adaptive Profile Reconstruction — patent‑safe alternative to slope‑style methods.</p></div>
+      <div class="card"><h3>Chamfer Automation</h3><p>Automatic retract at chamfer end to protect tool edge.</p></div>
+      <div class="card"><h3>Trajectory Visualization</h3><p>Preview motion before cutting to boost first‑run confidence.</p></div>
     </div>
   </div>
 </section>
 
   
-<div class="footer small">
-  © 2025 DTM Studio — All rights reserved.
-</div>
+<div class="footer small">© 2025 DTM Studio — All rights reserved.</div>
 
 </body>
 </html>
