--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact • DTM Studio</title>
+  <link rel="icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" href="assets/style.css">
   <meta name="description" content="DTM Studio — Diamond Turning Manager for precision optics labs.">
 </head>
@@ -11,7 +12,7 @@
   
 <div class="nav">
   <div class="inner">
-    <div class="brand"><img src="assets/logo.svg" alt="DTM logo"><span>DTM Studio</span></div>
+    <div class="brand"><img src="assets/dtmlogo.png" alt="DTM Cube Logo"></div>
     <div class="menu">
       <a href="index.html">Home</a>
       <a href="features.html">Features</a>
@@ -27,8 +28,8 @@
   <div class="container">
     <h2 class="section-title">Request Demo</h2>
     <div class="form card">
-      <p>Want to try DTM Studio or get in touch? Send an email and we will reply ASAP.</p>
-      <p><a class="btn" href="mailto:info@dtmstudio.com?subject=DTM%20Studio%20Demo%20Request">Email: info@dtmstudio.com</a></p>
+      <p>Want to try DTM Studio or discuss features? Send an email:</p>
+      <p><a class="btn" href="mailto:info@dtmstudio.com?subject=DTM%20Studio%20Demo%20Request">info@dtmstudio.com</a></p>
       <hr>
       <p class="small">No forms, no trackers — just email.</p>
     </div>
@@ -36,9 +37,7 @@
 </section>
 
   
-<div class="footer small">
-  © 2025 DTM Studio — All rights reserved.
-</div>
+<div class="footer small">© 2025 DTM Studio — All rights reserved.</div>
 
 </body>
 </html>
