--- a/gallery.html
+++ b/gallery.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gallery • DTM Studio</title>
+  <link rel="icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" href="assets/style.css">
   <meta name="description" content="DTM Studio — Diamond Turning Manager for precision optics labs.">
 </head>
@@ -11,7 +12,7 @@
   
 <div class="nav">
   <div class="inner">
-    <div class="brand"><img src="assets/logo.svg" alt="DTM logo"><span>DTM Studio</span></div>
+    <div class="brand"><img src="assets/dtmlogo.png" alt="DTM Cube Logo"></div>
     <div class="menu">
       <a href="index.html">Home</a>
       <a href="features.html">Features</a>
@@ -27,21 +28,19 @@
   <div class="container">
     <h2 class="section-title">Gallery</h2>
     <div class="gallery">
-      <img src="assets/shot1.svg" alt="DTM Screenshot 1">
-<img src="assets/shot2.svg" alt="DTM Screenshot 2">
-<img src="assets/shot3.svg" alt="DTM Screenshot 3">
-<img src="assets/shot4.svg" alt="DTM Screenshot 4">
-<img src="assets/shot5.svg" alt="DTM Screenshot 5">
-<img src="assets/shot6.svg" alt="DTM Screenshot 6">
+      <img src="assets/shot1.svg" alt="Main UI">
+      <img src="assets/shot2.svg" alt="Segments">
+      <img src="assets/shot3.svg" alt="Corrections">
+      <img src="assets/shot4.svg" alt="Eco Theme">
+      <img src="assets/shot5.svg" alt="Trajectory">
+      <img src="assets/shot6.svg" alt="Chamfer">
     </div>
-    <p class="small" style="margin-top:12px">Replace these placeholders with real screenshots anytime.</p>
+    <p class="small" style="margin-top:12px">Replace placeholders with real screenshots anytime.</p>
   </div>
 </section>
 
   
-<div class="footer small">
-  © 2025 DTM Studio — All rights reserved.
-</div>
+<div class="footer small">© 2025 DTM Studio — All rights reserved.</div>
 
 </body>
 </html>
