Update contact email to rossohans@gmail.com

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     <h2 class="section-title">Request Demo</h2>
     <div class="form card">
       <p>Want to try DTM Studio or discuss features? Send an email:</p>
-      <p><a class="btn" href="mailto:info@dtmstudio.com?subject=DTM%20Studio%20Demo%20Request">info@dtmstudio.com</a></p>
+      <p><a class="btn" href="mailto:rossohans@gmail.com?subject=DTM%20Studio%20Demo%20Request">rossohans@gmail.com</a></p>
       <hr>
       <p class="small">No forms, no trackers — just email.</p>
     </div>
