Add real screenshots to Gallery

--- a/gallery.html
+++ b/gallery.html
@@ -28,12 +28,10 @@
   <div class="container">
     <h2 class="section-title">Gallery</h2>
     <div class="gallery">
-      <img src="assets/shot1.svg" alt="Main UI">
-      <img src="assets/shot2.svg" alt="Segments">
-      <img src="assets/shot3.svg" alt="Corrections">
-      <img src="assets/shot4.svg" alt="Eco Theme">
-      <img src="assets/shot5.svg" alt="Trajectory">
-      <img src="assets/shot6.svg" alt="Chamfer">
+  	<img src="assets/Screenshot1.png" alt="Precitech">
+ 	 <img src="assets/Screenshot2.png" alt="Nanotech">
+ 	 <img src="assets/Screenshot3.png" alt="Correctioons">
+  	<img src="assets/Screenshot4.png" alt="Main">
     </div>
     <p class="small" style="margin-top:12px">Replace placeholders with real screenshots anytime.</p>
   </div>
