--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,9 @@
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" href="assets/style.css">
   <meta name="description" content="DTM Studio — Diamond Turning Manager for precision optics labs.">
+
+  <!-- Lightbox CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
 </head>
 <body>
   
@@ -16,29 +19,38 @@
     <div class="menu">
       <a href="index.html">Home</a>
       <a href="features.html">Features</a>
-      <a href="gallery.html">Gallery</a>
+      <a href="gallery.html" class="active">Gallery</a>
       <a href="about.html">About</a>
       <a href="contact.html" class="btn btn-outline">Request Demo</a>
     </div>
   </div>
 </div>
 
-  
 <section class="section">
   <div class="container">
     <h2 class="section-title">Gallery</h2>
     <div class="gallery">
-  	<img src="assets/Screenshot1.png" alt="Precitech">
- 	 <img src="assets/Screenshot2.png" alt="Nanotech">
- 	 <img src="assets/Screenshot3.png" alt="Correctioons">
-  	<img src="assets/Screenshot4.png" alt="Main">
+      <a href="assets/Screenshot1.png" data-lightbox="dtm-gallery" data-title="Precitech interface">
+        <img src="assets/Screenshot1.png" alt="Precitech">
+      </a>
+      <a href="assets/Screenshot2.png" data-lightbox="dtm-gallery" data-title="Nanotech interface">
+        <img src="assets/Screenshot2.png" alt="Nanotech">
+      </a>
+      <a href="assets/Screenshot3.png" data-lightbox="dtm-gallery" data-title="Corrections window">
+        <img src="assets/Screenshot3.png" alt="Corrections">
+      </a>
+      <a href="assets/Screenshot4.png" data-lightbox="dtm-gallery" data-title="Main DTM Studio interface">
+        <img src="assets/Screenshot4.png" alt="Main">
+      </a>
     </div>
-    <p class="small" style="margin-top:12px">Replace placeholders with real screenshots anytime.</p>
+    <p class="small" style="margin-top:12px">Screenshots from real DTM Studio environment.</p>
   </div>
 </section>
 
-  
 <div class="footer small">© 2025 DTM Studio — All rights reserved.</div>
+
+<!-- Lightbox JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 
 </body>
 </html>
