Make logo clickable link to home

--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,12 @@
   
 <div class="nav">
   <div class="inner">
-    <div class="brand"><img src="assets/dtmlogo.png" alt="DTM Cube Logo"></div>
+    <div class="brand">
+  <a href="index.html">
+    <img src="assets/dtmlogo.png" alt="DTM Cube Logo">
+  </a>
+</div>
+
     <div class="menu">
       <a href="index.html">Home</a>
       <a href="features.html">Features</a>
