Move bg-crawl outside nav and style Star Wars crawl effect

--- a/index.html
+++ b/index.html
@@ -27,6 +27,37 @@
   </div>
 </div>
 
+<!-- Background crawl must be OUTSIDE the nav -->
+<div class="bg-crawl" aria-hidden="true">
+  <div class="crawl-track">
+    <pre>DTM STUDIO — DIAMOND TURNING MANAGER
+MACHINE: PRECISION LATHE
+PROFILE: MULTI-SEGMENT  |  TOOL RADIUS: 0.250
+MODE: M3  |  FEED: F800  |  RPM: 1200
+CORRECTION: MOD L/R/A  |  SCALE: 75%  |  XSHIFT: +0.010
+CHAMFER: ENABLED  |  RETRACT: SAFE
+TRAJECTORY: PREVIEW OK  |  ERR: < 0.1µm
+––––––––––––––––––––––––––––––––––––––––––––––––––
+PASS 01 ………………………………………………………………………………… OK
+PASS 02 ………………………………………………………………………………… OK
+PASS 03 ………………………………………………………………………………… OK
+DTM STUDIO — BUILT BY OPERATORS FOR OPERATORS</pre>
+
+    <pre>DTM STUDIO — DIAMOND TURNING MANAGER
+MACHINE: PRECISION LATHE
+PROFILE: MULTI-SEGMENT  |  TOOL RADIUS: 0.250
+MODE: M3  |  FEED: F800  |  RPM: 1200
+CORRECTION: MOD L/R/A  |  SCALE: 75%  |  XSHIFT: +0.010
+CHAMFER: ENABLED  |  RETRACT: SAFE
+TRAJECTORY: PREVIEW OK  |  ERR: < 0.1µm
+––––––––––––––––––––––––––––––––––––––––––––––––––
+PASS 01 ………………………………………………………………………………… OK
+PASS 02 ………………………………………………………………………………… OK
+PASS 03 ………………………………………………………………………………… OK
+DTM STUDIO — BUILT BY OPERATORS FOR OPERATORS</pre>
+  </div>
+</div>
+
   
 <section class="hero">
   <div class="container wrap">
