Updated demo request email to info@dtm-studio.org

--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,13 @@
     <h2 class="section-title">Request Demo</h2>
     <div class="form card">
       <p>Want to try DTM Studio or discuss features? Send an email:</p>
-      <p><a class="btn" href="mailto:rossohans@gmail.com?subject=DTM%20Studio%20Demo%20Request">rossohans@gmail.com</a></p>
+      <p><a class="btn" href="mailto:info@dtm-studio.org?subject=DTM%20Studio%20Demo%20Request">info@dtm-studio.org</a></p>
       <hr>
       <p class="small">No forms, no trackers — just email.</p>
     </div>
   </div>
 </section>
+
 
   
 <div class="footer small">© 2025 DTM Studio — All rights reserved.</div>
