Update about, features, index and sitemap

--- a/about.html
+++ b/about.html
@@ -44,10 +44,11 @@
         <li><strong>Work with profile corrections (MOD files):</strong> load, select side (Left/Right/Average), scale by percentage, and stack multiple corrections.</li>
         <li><strong>Tool radius support:</strong> programmable Tool Radius is included directly in trajectory calculations, preventing double compensation and ensuring accuracy.</li>
         <li><strong>Flexible project structure:</strong> when saving, the project stores form, corrections, and applied parameters, so work can be restored without re-entering everything manually.</li>
+	<li><strong>Optimus LDT support:</strong> full compatibility with Micro-LAM Optimus laser-assisted diamond turning. Generate ready code for hybrid cutting — standard and laser-enabled, without extra steps.</li>
         <li><strong>Log and error control:</strong> the operator can track every preparation step, reducing the risk of using incorrect parameters.</li>
         <li><strong>Simple file organization:</strong> G-codes, corrections, and project files are saved together in one folder — no need to search across directories.</li>
       </ul>
-
+	
       <h4>Why this matters for operators:</h4>
       <ul>
         <li><strong>Speeds up program preparation:</strong> no need to hand-edit commands or save in different formats.</li>
