--- a/features.html
+++ b/features.html
@@ -44,6 +44,8 @@
       <div class="card"><h3>Error Prevention</h3><p>Built-in checks minimize operator mistakes and ensure correct program parameters.</p></div>
       <div class="card"><h3>Speed</h3><p>Preparation time reduced several times compared to manual code editing.</p></div>
       <div class="card"><h3>Simplified Geometry Presets</h3><p>Quick generation of Sphere, Asphere, Convex, and Concave surfaces without manual formulas.</p></div>
+	<div class="card"><h3>Optimus LDT Support</h3><p>Full compatibility with Micro-LAM Optimus laser-assisted diamond turning. Generate hybrid programs — standard and laser-enabled — with no extra steps.</p></div>
+
     </div>
     <hr>
     <p class="small">DTM Studio is an independent software project; third-party trademarks are not referenced.</p>
