--- a/index.html
+++ b/index.html
@@ -99,13 +99,14 @@ X26.670000 Z-9.970502
     <div class="grid">
       
       <div class="card"><h3>Direct Machine Output</h3><p>Generate clean G-code for Precitech (.PGM) and Nanotech (.NC) without manual edits.</p></div>
+<div class="card"><h3>Optimus LDT Support</h3><p>Full compatibility with Micro-LAM Optimus laser-assisted diamond turning. Generate ready code for hybrid cutting — standard and laser-enabled, without extra steps.</p></div>
       <div class="card"><h3>Programmable Tool Radius</h3><p>Explicit radius in every trajectory. No double compensation, no hidden surprises.</p></div>
       <div class="card"><h3>Correction Stacking</h3><p>Load multiple MOD files, scale by %, shift in X, and undo duplicates instantly.</p></div>
       <div class="card"><h3>Profile Safety</h3><p>Every step is logged and validated — minimizing operator mistakes before they reach the machine.</p></div>
       <div class="card"><h3>One-click Project Save</h3><p>Form, corrections, and code stored together. Reopen anytime without re-entering.</p></div>
       <div class="card"><h3>Operator Speed Boost</h3><p>Routine prep reduced to seconds: Correct-and-Go instead of endless edits.</p></div>
       <div class="card"><h3>Universal Cutting Modes</h3><p>Create programs for both sides, with or without loops, chamfers included — all in one click.</p></div>
-	<div class="card"><h3>Multi-segment Workflow</h3><p>From spheres to aspheres, bevels and flats — combine them seamlessly in one program.</p></div>
+      <div class="card"><h3>Multi-segment Workflow</h3><p>From spheres to aspheres, bevels and flats — combine them seamlessly in one program.</p></div>
     </div>
     <hr>
     <p class="small">DTM Studio is developed independently in Riga • Focused on real SPDT operator needs</p>
