Update About page and style: added System Requirements section

--- a/about.html
+++ b/about.html
@@ -63,6 +63,33 @@
   </div>
 </section>
 
+<section class="section requirements">
+  <div class="container">
+    <h2 class="section-title">System Requirements</h2>
+    <div class="requirements-grid">
+      <div class="card">
+        <h3>Minimum</h3>
+        <ul>
+          <li><strong>OS:</strong> Windows 98SE / 2000 / XP</li>
+          <li><strong>CPU:</strong> Pentium II, 500 MHz</li>
+          <li><strong>RAM:</strong> 256 MB</li>
+          <li><strong>Disk:</strong> 50 MB free</li>
+          <li><strong>Runtime:</strong> Included in installer</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h3>Recommended</h3>
+        <ul>
+          <li><strong>OS:</strong> Windows 10 / 11</li>
+          <li><strong>CPU:</strong> Intel i5/i7 (or AMD equivalent)</li>
+          <li><strong>RAM:</strong> 8 GB or more</li>
+          <li><strong>Disk:</strong> SSD, 200 MB free</li>
+          <li><strong>Display:</strong> 1920×1080</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
 
   
 <div class="footer small">© 2025 DTM Studio — All rights reserved.</div>
