Added Namecheap logo link to footer

--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@ X26.670000 Z-9.970502
   </div>
 </section>
 
-  
-<div class="footer small">© 2025 DTM Studio — All rights reserved.</div>
+ 
 
 <script>
 (function(){
@@ -128,6 +127,21 @@ X26.670000 Z-9.970502
   onScroll();
 })();
 </script>
+
+<footer class="site-footer">
+  <div class="footer-inner">
+    <p>© 2025 DTM Studio. All rights reserved.</p>
+
+    <div class="powered-by">
+      <span>Powered by</span>
+      <a href="https://www.namecheap.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/namecheap.png" alt="Namecheap" />
+      </a>
+    </div>
+  </div>
+</footer>
+
+
 
 
 
