--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,19 @@
 </section>
 
 
-  
-<div class="footer small">© 2025 DTM Studio — All rights reserved.</div>
+<footer class="site-footer">
+  <div class="footer-inner">
+    <p>© 2025 DTM Studio. All rights reserved.</p>
+
+    <div class="powered-by">
+      <span>Powered by</span>
+      <a href="https://www.namecheap.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/namecheap.png" alt="Namecheap" />
+      </a>
+    </div>
+  </div>
+</footer>
+
 
 </body>
 </html>
