--- a/gallery.html
+++ b/gallery.html
@@ -57,7 +57,19 @@
 </section>
 
 <!-- FOOTER -->
-<div class="footer small">© 2025 DTM Studio — All rights reserved.</div>
+<footer class="site-footer">
+  <div class="footer-inner">
+    <p>© 2025 DTM Studio. All rights reserved.</p>
+
+    <div class="powered-by">
+      <span>Powered by</span>
+      <a href="https://www.namecheap.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/namecheap.png" alt="Namecheap" />
+      </a>
+    </div>
+  </div>
+</footer>
+
 
 <!-- Lightbox JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
