--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home • DTM Studio</title>
+  <title>About • DTM Studio</title>
   <link rel="icon" type="image/png" href="assets/favicon.png">
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="assets/style.css?v=2">
   <meta name="description" content="DTM Studio — Diamond Turning Manager for precision optics labs.">
 </head>
+
 <body>
   
 <div class="nav">
