--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About • DTM Studio</title>
+  <title>DTM Studio</title>
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" href="assets/style.css?v=2">
   <meta name="description" content="DTM Studio — Diamond Turning Manager for precision optics labs.">
