power by rework

--- a/about.html
+++ b/about.html
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About • DTM Studio</title>
   <link rel="icon" type="image/png" href="assets/favicon.png">
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="assets/style.css?v=2">
   <meta name="description" content="DTM Studio — Diamond Turning Manager for precision optics labs.">
 </head>
+
 <body>
   
 <div class="nav">
@@ -97,13 +98,13 @@
     <p>© 2025 DTM Studio. All rights reserved.</p>
 
     <div class="powered-by">
-      <span>Powered by</span>
       <a href="https://www.namecheap.com" target="_blank" rel="noopener noreferrer">
         <img src="assets/namecheap.png" alt="Namecheap" />
       </a>
     </div>
   </div>
 </footer>
+
 
 
 </body>
