--- a/index.html
+++ b/index.html
@@ -5,33 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DTM Studio</title>
   <link rel="icon" type="image/png" href="assets/favicon.png">
-  <link rel="stylesheet" href="assets/style.css?v=2">
+  <link rel="stylesheet" href="assets/style.css?v=3">
   <meta name="description" content="DTM Studio — Diamond Turning Manager for precision optics labs.">
+  <style>
+    html { scroll-behavior: smooth; }
+  </style>
 </head>
 
 <body>
   
+<!-- NAVIGATION -->
 <div class="nav">
   <div class="inner">
     <div class="brand">
-  <a href="index.html">
-    <img src="assets/dtmlogo.png" alt="DTM Cube Logo">
-  </a>
-</div>
+      <a href="#top">
+        <img src="assets/dtmlogo.png" alt="DTM Cube Logo">
+      </a>
+    </div>
     <div class="menu">
-      <a href="index.html">Home</a>
-      <a href="features.html">Features</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="about.html">About</a>
-      <a href="contact.html" class="btn btn-outline">Request Demo</a>
+      <a href="#features">Features</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#about">About</a>
+      <a href="#contact" class="btn btn-outline">Request Demo</a>
     </div>
   </div>
 </div>
 
-<!-- Background crawl must be OUTSIDE the nav -->
+<!-- BACKGROUND CRAWL -->
 <div class="bg-crawl" aria-hidden="true">
   <div class="crawl-track">
-    <pre>n1000                  ;subroutine
+<pre>n1000                  ;subroutine
 ;----- PART INFO DATA --------------------------
 ;DIAMETER: 54
 ;RADIUS: 40,7
@@ -50,9 +53,7 @@
 ;-----------------------------------------------
 
 G40 X30 Z5 F800
-
 Z-12.1 F200
-
 G41 X27.80000 Z-11.085093 F100
 M7.1
 F15
@@ -75,17 +76,17 @@ X26.670000 Z-9.970502
   </div>
 </div>
 
-  
-<section class="hero">
+<!-- HERO -->
+<section id="top" class="hero">
   <div class="container wrap">
     <div>
       <span class="badge">Diamond Turning Manager</span>
       <h1>DTM Studio — Precision made simple</h1>
-        <p>Built by SPDT operators for daily work on Precitech and Nanotech machines.  
-        Generate G-code, apply profile corrections, and manage projects faster and safer — all in one place.</p>
+      <p>Built by SPDT operators for daily work on Precitech and Nanotech machines.<br>
+      Generate G-code, apply profile corrections, and manage projects faster and safer — all in one place.</p>
       <div style="display:flex;gap:12px;flex-wrap:wrap">
-        <a class="btn" href="features.html">Explore Features</a>
-        <a class="btn btn-outline" href="gallery.html">See Gallery</a>
+        <a class="btn" href="#features">Explore Features</a>
+        <a class="btn btn-outline" href="#gallery">See Gallery</a>
       </div>
     </div>
     <div style="display:flex;justify-content:center;align-items:center">
@@ -94,13 +95,14 @@ X26.670000 Z-9.970502
   </div>
 </section>
 
-<section class="section">
+<!-- HIGHLIGHTS -->
+<section id="highlights" class="section">
   <div class="container">
     <h2 class="section-title">Highlights</h2>
     <div class="grid">
-      
+
       <div class="card"><h3>Direct Machine Output</h3><p>Generate clean G-code for Precitech (.PGM) and Nanotech (.NC) without manual edits.</p></div>
-<div class="card"><h3>Optimus LDT Support</h3><p>Full compatibility with Micro-LAM Optimus laser-assisted diamond turning. Generate ready code for hybrid cutting — standard and laser-enabled, without extra steps.</p></div>
+      <div class="card"><h3>Optimus LDT Support</h3><p>Full compatibility with Micro-LAM Optimus laser-assisted diamond turning. Generate ready code for hybrid cutting — standard and laser-enabled, without extra steps.</p></div>
       <div class="card"><h3>Programmable Tool Radius</h3><p>Explicit radius in every trajectory. No double compensation, no hidden surprises.</p></div>
       <div class="card"><h3>Correction Stacking</h3><p>Load multiple MOD files, scale by %, shift in X, and undo duplicates instantly.</p></div>
       <div class="card"><h3>Profile Safety</h3><p>Every step is logged and validated — minimizing operator mistakes before they reach the machine.</p></div>
@@ -108,13 +110,119 @@ X26.670000 Z-9.970502
       <div class="card"><h3>Operator Speed Boost</h3><p>Routine prep reduced to seconds: Correct-and-Go instead of endless edits.</p></div>
       <div class="card"><h3>Universal Cutting Modes</h3><p>Create programs for both sides, with or without loops, chamfers included — all in one click.</p></div>
       <div class="card"><h3>Multi-segment Workflow</h3><p>From spheres to aspheres, bevels and flats — combine them seamlessly in one program.</p></div>
+
     </div>
     <hr>
     <p class="small">DTM Studio is developed independently in Riga • Focused on real SPDT operator needs</p>
   </div>
 </section>
 
- 
+
+<!-- FEATURES -->
+<section id="features" class="section">
+  <div class="container">
+    <h2 class="section-title">Core Features</h2>
+    <div class="grid">
+      <div class="card"><h3>G-code Generation</h3><p>Create ready-to-cut code for Precitech (.PGM) and Nanotech (.NC) machines without manual edits.</p></div>
+      <div class="card"><h3>Profile Corrections</h3><p>Load MOD files, choose side (Left / Right / Average), scale by percentage, and apply with precision.</p></div>
+      <div class="card"><h3>Corrections Stack with Undo</h3><p>Safely stack multiple corrections, prevent duplicates, and revert steps at any time.</p></div>
+      <div class="card"><h3>Tool Radius Mode</h3><p>Programmable tool radius built directly into trajectory calculations, avoiding double compensation.</p></div>
+      <div class="card"><h3>Save Order</h3><p>One-click save: project, G-codes, and corrections are stored together in a single folder.</p></div>
+      <div class="card"><h3>Correct and Go</h3><p>Fast correction cycle — apply measured data, regenerate, and cut again without extra steps.</p></div>
+      <div class="card"><h3>Loop File One-Click</h3><p>Create programs for all turning sides (with or without bevels) plus ready loop file in a single action.</p></div>
+      <div class="card"><h3>Surface + Diameter Turning</h3><p>Simplified workflow for cutting both profile and cylinder in one setup.</p></div>
+      <div class="card"><h3>Error Prevention</h3><p>Built-in checks minimize operator mistakes and ensure correct program parameters.</p></div>
+      <div class="card"><h3>Speed</h3><p>Preparation time reduced several times compared to manual code editing.</p></div>
+      <div class="card"><h3>Simplified Geometry Presets</h3><p>Quick generation of Sphere, Asphere, Convex, and Concave surfaces without manual formulas.</p></div>
+      <div class="card"><h3>Optimus LDT Support</h3><p>Full compatibility with Micro-LAM Optimus laser-assisted diamond turning.</p></div>
+    </div>
+    <hr>
+    <p class="small">DTM Studio is an independent software project; third-party trademarks are not referenced.</p>
+  </div>
+</section>
+
+<!-- GALLERY -->
+<section id="gallery" class="section">
+  <div class="container">
+    <h2 class="section-title">Gallery</h2>
+    <div class="gallery">
+      <a href="assets/Screenshot1.png" data-lightbox="dtm-gallery" data-title="Precitech G-code preview">
+        <img src="assets/Screenshot1.png" alt="Precitech">
+      </a>
+      <a href="assets/Screenshot2.png" data-lightbox="dtm-gallery" data-title="Nanotech G-code preview">
+        <img src="assets/Screenshot2.png" alt="Nanotech">
+      </a>
+      <a href="assets/Screenshot3.png" data-lightbox="dtm-gallery" data-title="Profile corrections window">
+        <img src="assets/Screenshot3.png" alt="Corrections">
+      </a>
+      <a href="assets/Screenshot4.png" data-lightbox="dtm-gallery" data-title="Main DTM Studio interface">
+        <img src="assets/Screenshot4.png" alt="Main">
+      </a>
+    </div>
+    <p class="small" style="margin-top:12px">Screenshots from the real DTM Studio environment.</p>
+  </div>
+</section>
+
+<!-- ABOUT -->
+<section id="about" class="section">
+  <div class="container">
+    <h2 class="section-title">About</h2>
+    <div class="card">
+      <h3>✦ DTM Studio — Diamond Turning Manager</h3>
+      <p><strong>DTM Studio</strong> is software developed in Riga by an SPDT machine operator, built specifically for operators. It addresses the everyday workflow on Precitech and Nanotech machines and eliminates the routine steps where most time is wasted or mistakes often occur.</p>
+      <p>Instead of manually editing code or switching between multiple utilities, DTM brings everything into one place.</p>
+
+      <h4>What you can do in DTM Studio:</h4>
+      <ul>
+        <li><strong>Generate G-code</strong> for Precitech (.PGM) and Nanotech (.NC).</li>
+        <li><strong>Work with profile corrections:</strong> load MOD files, select side, scale by percentage, and stack multiple corrections.</li>
+        <li><strong>Tool radius support:</strong> included directly in trajectory calculations.</li>
+        <li><strong>Flexible project structure:</strong> stores form, corrections, and parameters together.</li>
+        <li><strong>Optimus LDT support:</strong> hybrid cutting code — standard and laser-enabled.</li>
+        <li><strong>Log and error control:</strong> tracks every step, reducing risk of mistakes.</li>
+      </ul>
+      <p class="small">Status: Active development • Region: EU</p>
+    </div>
+  </div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact" class="section">
+  <div class="container">
+    <h2 class="section-title">Request Demo</h2>
+    <div class="form card">
+      <p>Want to try DTM Studio or discuss features? Send an email:</p>
+      <p><a class="btn" href="mailto:info@dtm-studio.org?subject=DTM%20Studio%20Demo%20Request">info@dtm-studio.org</a></p>
+      <hr>
+      <p class="small">No forms, no trackers — just email.</p>
+    </div>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer class="site-footer">
+  <div class="footer-inner">
+    <p>© 2025 DTM Studio. All rights reserved.</p>
+    <div class="powered-by">
+      <a href="https://www.namecheap.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/namecheap.png" alt="Namecheap" />
+      </a>
+    </div>
+  </div>
+</footer>
+
+<!-- LIGHTBOX -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+<script>
+  lightbox.option({
+    resizeDuration: 200,
+    fadeDuration: 200,
+    imageFadeDuration: 200,
+    wrapAround: true,
+    alwaysShowNavOnTouchDevices: true
+  });
+</script>
 
 <script>
 (function(){
@@ -128,23 +236,6 @@ X26.670000 Z-9.970502
   onScroll();
 })();
 </script>
-
-<footer class="site-footer">
-  <div class="footer-inner">
-    <p>© 2025 DTM Studio. All rights reserved.</p>
-
-    <div class="powered-by">
-      <a href="https://www.namecheap.com" target="_blank" rel="noopener noreferrer">
-        <img src="assets/namecheap.png" alt="Namecheap" />
-      </a>
-    </div>
-  </div>
-</footer>
-
-
-
-
-
 
 </body>
 </html>
