Add SEO and social meta tags

--- a/index.html
+++ b/index.html
@@ -3,14 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DTM Studio</title>
+  <title>DTM Studio — Precision made simple</title>
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" href="assets/style.css?v=3">
-  <meta name="description" content="DTM Studio — Diamond Turning Manager for precision optics labs.">
+
+  <!-- =====================
+       META / SEO / SOCIAL
+       ===================== -->
+  <meta name="title" content="DTM Studio — Precision made simple">
+  <meta name="description" content="DTM Studio — Diamond Turning Manager built for SPDT operators. Generate G-code for Precitech & Nanotech machines, apply profile corrections, and manage projects with precision — all in one place.">
+  <meta name="keywords" content="DTM Studio, diamond turning, Precitech, Nanotech, MOD file, G-code, optics manufacturing, asphere, SPDT software, profile correction">
+  <meta name="author" content="DTM Studio">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://dtm-studio.org/">
+  <meta property="og:title" content="DTM Studio — Precision made simple">
+  <meta property="og:description" content="Precision optics software for SPDT operators. Fast, safe, and automated — DTM Studio simplifies your entire workflow.">
+  <meta property="og:image" content="https://dtm-studio.org/assets/preview.png">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://dtm-studio.org/">
+  <meta name="twitter:title" content="DTM Studio — Precision made simple">
+  <meta name="twitter:description" content="Built for SPDT operators — manage projects, apply corrections, and generate G-code faster and safer.">
+  <meta name="twitter:image" content="https://dtm-studio.org/assets/preview.png">
+
   <style>
     html { scroll-behavior: smooth; }
   </style>
 </head>
+
 
 <body>
   
